--- a/dialogL/src/main/AndroidManifest.xml
+++ b/dialogL/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="rosenpin.androidL.dialog">
 
-    <application android:allowBackup="true"
-        android:label="@string/app_name"
+    <application
+        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
->
+        android:label="@string/app_name">
 
     </application>
 
